# byte-utilities

./: .gitignore  CMakeLists.txt  README.md  install.sh
.github/workflows/: ubuntu-unit-test.yml
cmake/: ByteUtilsConfig.cmake  ByteUtilsTargets.cmake
include/: byte.h  byte_utils.h  byte_vector.h  details.h  word.h
src/: byte.cpp  byte_vector.cpp  word.cpp
test/: CMakeLists.txt  test_byte.cpp  test_byte_iterator.cpp  test_byte_reverse_iterator.cpp  test_byte_vector.cpp  test_word.cpp
